potential fix to line break in contact link

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -4,7 +4,7 @@
     position: relative;
     top: 50px;
     margin: 0 auto;
-    width: 100%;
+    width: auto;
 }
 
 .contact-section{
